# itmo-is25-cpp-labs

./: README.md
Lab_1_part_1/: 1_point.cpp  2_polyline.h  3_closed_polyline.cpp  3_closed_polyline.h  4_polygon.cpp  5_triangle.cpp  5_triangle.h  6_trapezoid.cpp  6_trapezoid.h  7_regular_polygon.cpp  7_regular_polygon.h  main.cpp
Lab_1_part_2/: main.cpp  polynomial.cpp  polynomial.h
Lab_2/: CMakeLists.txt  a.out  curl_class.h  json_classes.cpp  json_classes.h  main.cpp
Lab_3/: CMakeLists.txt  Circular_buffer.h  algorithms.h  main.cpp
Lab_4/: CMakeLists.txt  main.cpp  rubik.h
Lab_5/: Allocator.h  CMakeLists.txt  MyPool.h  main.cpp
Lab_6/: CMakeLists.txt  main.cpp  polynomial.h
